--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Blur Loading</title>
 </head>
 <body>
+    <section class="bg"></section>
+    <div class="loading-text">0%</div>
     
-
     <script src="js/main.js"></script>
 </body>
 </html>
